# deproject

./: .coveragerc  .gitignore  .hgignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  NOTES  README.rst  cosmocalc.py  deproject.py  pyproject.toml  readthedocs.yml  rtd-environment.yml  setup.cfg  setup.py  specstack.py
docs/: Makefile  changes.rst  conf.py  cosmocalc.rst  deproject.rst  geometry.ppt  index.rst  installation.rst  mixing.txt  overview.rst  references.rst  rtd-pip-requirements  specstack.rst  todo.rst
docs/examples/: 3c186.rst  m87.rst  tie.rst
docs/modules/: deproject.rst  specstack.rst
examples/: 3c186  acis-s-bkg.py  fit1_3c186.py  fit_3c186.py  fit_m87.py  fit_m87_da.py  fit_m87_tied.py  m87  plot_m87.py
src/deproject/: __init__.py  deproject.py  fieldstore.py  simplegraph.py  specstack.py
tests/: test_deproject.py  test_simplegraph.py
