[metadata]
version = 0.2.2
name = deproject
author = Douglas Burke, Tom Aldcroft
author_email = dburke.gw@gmail.com
url = https://deproject.readthedocs.io/
project_urls =
    Issue Tracker = https://github.com/sherpa-deproject/deproject/issues/
    Source Code = https://github.com/sherpa-deproject/deproject/
    Documentaion = https://deproject.readthedocs.io/

keywords = deprojection, xray, 3d, 2d, plasma, Astrophysics, onion

description = Sherpa deprojection package (X-ray analysis of Galaxy Clusters, Groups, and Galaxies)
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
license_files = LICENSE
platforms = Linux, Mac OS X
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
# zip_safe = False
python_requires = ~=3.7
install_requires =
    sherpa >= 4.14.0
    astropy
    scipy

tests_require =
    pytest

package_dir =
    =src
packages = find:

[options.packages.find]
where=src
